# distillcore-agents

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/distillcore_agents/: __init__.py  client.py  errors.py  orchestrator.py  schema.sql  server.py  store.py
src/distillcore_agents/agents/: __init__.py  base.py  models.py  processing.py  qa.py  research.py  triage.py
tests/: test_client.py  test_models.py  test_store.py
