[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distillcore-agents"
version = "0.1.0"
description = "Pydantic-AI agent layer for intelligent document processing with distillcore"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fahad Baig", email = "mfbaig35r@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]
dependencies = [
    "distillcore>=0.4.0",
    "pydantic-ai>=0.1",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/mfbaig35r/distillcore-agents"
Repository = "https://github.com/mfbaig35r/distillcore-agents"

[project.optional-dependencies]
pdf = ["distillcore[pdf]"]
all = ["distillcore[all]"]
serve = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8", "mypy>=1.0"]

[project.scripts]
distillcore-agents = "distillcore_agents.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/distillcore_agents"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["distillcore.*", "pydantic_ai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
